{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 410,
  "lineage": "880cc2df-f5c9-68ef-bd70-e28c05eb09d4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jmg_ngw_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b0e57b1ea8eded3b",
            "association_id": "eipassoc-09747c3b74f4b6f13",
            "domain": "vpc",
            "id": "eipalloc-0b0e57b1ea8eded3b",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0664402af8eb2187e",
            "private_dns": "ip-10-0-0-154.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.154",
            "public_dns": "ec2-52-79-88-71.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.79.88.71",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jmg_web_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-064dd31effcfcb44e",
            "associate_with_private_ip": "10.0.0.11",
            "association_id": "eipassoc-0ca8752471a07ef91",
            "domain": "vpc",
            "id": "eipalloc-064dd31effcfcb44e",
            "instance": "i-0ce9d2c5a61254bb5",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0e1fb161b0ec4ebb1",
            "private_dns": "ip-10-0-0-11.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.11",
            "public_dns": "ec2-3-38-51-46.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.38.51.46",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.jmg_web",
            "aws_internet_gateway.jmg_ig",
            "aws_security_group.jmg_sg",
            "aws_subnet.jmg_puba",
            "aws_vpc.jmg_vpc",
            "data.aws_ami.amzn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jmg_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a5a6128e65676ebb",
            "arn": "arn:aws:ec2:ap-northeast-2:396350191448:instance/i-0ce9d2c5a61254bb5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ce9d2c5a61254bb5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssw-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e1fb161b0ec4ebb1",
            "private_dns": "ip-10-0-0-11.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.11",
            "public_dns": "ec2-3-38-51-46.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.38.51.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03bb5ff20d8341b98",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06f0205e97be31309",
            "tags": {
              "Name": "jmg-web"
            },
            "tags_all": {
              "Name": "jmg-web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ce0ac243eed1a666"
            ]
          },
          "dependencies": [
            "aws_security_group.jmg_sg",
            "aws_subnet.jmg_puba",
            "aws_vpc.jmg_vpc",
            "data.aws_ami.amzn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jmg_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:396350191448:internet-gateway/igw-083905b02c7d6896c",
            "id": "igw-083905b02c7d6896c",
            "owner_id": "396350191448",
            "tags": {
              "Name": "jmg-ig"
            },
            "tags_all": {
              "Name": "jmg-ig"
            },
            "vpc_id": "vpc-0ea1a121618707ef8"
          },
          "dependencies": [
            "aws_vpc.jmg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "jmg_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:396350191448:loadbalancer/app/jmg-alb/65a9d233c3a1f640",
            "arn_suffix": "app/jmg-alb/65a9d233c3a1f640",
            "dns_name": "jmg-alb-48944433.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:396350191448:loadbalancer/app/jmg-alb/65a9d233c3a1f640",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jmg-alb",
            "security_groups": [
              "sg-0ce0ac243eed1a666"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06f0205e97be31309"
              },
              {
                "subnet_id": "subnet-0a4ccabba8a25a1af"
              }
            ],
            "subnets": [
              "subnet-06f0205e97be31309",
              "subnet-0a4ccabba8a25a1af"
            ],
            "tags": {
              "Name": "jmg-alb"
            },
            "tags_all": {
              "Name": "jmg-alb"
            },
            "vpc_id": "vpc-0ea1a121618707ef8",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.jmg_sg",
            "aws_subnet.jmg_puba",
            "aws_subnet.jmg_pubc",
            "aws_vpc.jmg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "jmg_albis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:396350191448:listener/app/jmg-alb/65a9d233c3a1f640/0042565945b29b8f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:396350191448:targetgroup/jmg-albtg/c680fa773cef9f64",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:396350191448:listener/app/jmg-alb/65a9d233c3a1f640/0042565945b29b8f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:396350191448:loadbalancer/app/jmg-alb/65a9d233c3a1f640",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.jmg_alb",
            "aws_lb_target_group.jmg_albtg",
            "aws_security_group.jmg_sg",
            "aws_subnet.jmg_puba",
            "aws_subnet.jmg_pubc",
            "aws_vpc.jmg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jmg_albtg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:396350191448:targetgroup/jmg-albtg/c680fa773cef9f64",
            "arn_suffix": "targetgroup/jmg-albtg/c680fa773cef9f64",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200",
                "path": "/health.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:396350191448:targetgroup/jmg-albtg/c680fa773cef9f64",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "jmg-albtg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ea1a121618707ef8"
          },
          "dependencies": [
            "aws_vpc.jmg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "jmg_albtgatt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:396350191448:targetgroup/jmg-albtg/c680fa773cef9f64-20211129013251226200000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:396350191448:targetgroup/jmg-albtg/c680fa773cef9f64",
            "target_id": "i-0ce9d2c5a61254bb5"
          },
          "dependencies": [
            "aws_subnet.jmg_puba",
            "aws_vpc.jmg_vpc",
            "data.aws_ami.amzn",
            "aws_instance.jmg_web",
            "aws_lb_target_group.jmg_albtg",
            "aws_security_group.jmg_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "jmg_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b0e57b1ea8eded3b",
            "connectivity_type": "public",
            "id": "nat-03fdc924a75ee65f5",
            "network_interface_id": "eni-0664402af8eb2187e",
            "private_ip": "10.0.0.154",
            "public_ip": "52.79.88.71",
            "subnet_id": "subnet-06f0205e97be31309",
            "tags": {
              "Name": "jmg-ngw"
            },
            "tags_all": {
              "Name": "jmg-ngw"
            }
          },
          "dependencies": [
            "aws_eip.jmg_ngw_ip",
            "aws_subnet.jmg_puba",
            "aws_vpc.jmg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jmg_ngwrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:396350191448:route-table/rtb-0e7042c82db10e4c2",
            "id": "rtb-0e7042c82db10e4c2",
            "owner_id": "396350191448",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-03fdc924a75ee65f5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jmg-ngwrt"
            },
            "tags_all": {
              "Name": "jmg-ngwrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea1a121618707ef8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.jmg_ngw",
            "aws_vpc.jmg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jmg_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:396350191448:route-table/rtb-0dcf008e2635635cc",
            "id": "rtb-0dcf008e2635635cc",
            "owner_id": "396350191448",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-083905b02c7d6896c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jmg-rt"
            },
            "tags_all": {
              "Name": "jmg-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea1a121618707ef8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.jmg_ig",
            "aws_vpc.jmg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jmg_igas_puba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055d400a6304c4e11",
            "route_table_id": "rtb-0dcf008e2635635cc",
            "subnet_id": "subnet-06f0205e97be31309"
          },
          "dependencies": [
            "aws_internet_gateway.jmg_ig",
            "aws_route_table.jmg_rt",
            "aws_subnet.jmg_puba",
            "aws_vpc.jmg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jmg_igas_pubc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee2b18ff6685e81f",
            "route_table_id": "rtb-0dcf008e2635635cc",
            "subnet_id": "subnet-0a4ccabba8a25a1af"
          },
          "dependencies": [
            "aws_internet_gateway.jmg_ig",
            "aws_route_table.jmg_rt",
            "aws_subnet.jmg_pubc",
            "aws_vpc.jmg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jmg_ngwass_pria",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc8496d6f007bfa1",
            "route_table_id": "rtb-0e7042c82db10e4c2",
            "subnet_id": "subnet-03ff6b34efde87984"
          },
          "dependencies": [
            "aws_vpc.jmg_vpc",
            "aws_eip.jmg_ngw_ip",
            "aws_nat_gateway.jmg_ngw",
            "aws_route_table.jmg_ngwrt",
            "aws_subnet.jmg_pria",
            "aws_subnet.jmg_puba"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jmg_ngwass_pric",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a551332ef321dea3",
            "route_table_id": "rtb-0e7042c82db10e4c2",
            "subnet_id": "subnet-03ee954376f9bf7d0"
          },
          "dependencies": [
            "aws_eip.jmg_ngw_ip",
            "aws_nat_gateway.jmg_ngw",
            "aws_route_table.jmg_ngwrt",
            "aws_subnet.jmg_pric",
            "aws_subnet.jmg_puba",
            "aws_vpc.jmg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jmg_ngwass_pridba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a706e6ef2e190d62",
            "route_table_id": "rtb-0e7042c82db10e4c2",
            "subnet_id": "subnet-0860ab4da7365a95b"
          },
          "dependencies": [
            "aws_eip.jmg_ngw_ip",
            "aws_nat_gateway.jmg_ngw",
            "aws_route_table.jmg_ngwrt",
            "aws_subnet.jmg_pridba",
            "aws_subnet.jmg_puba",
            "aws_vpc.jmg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jmg_ngwass_pridbc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093283b77ac8dc11d",
            "route_table_id": "rtb-0e7042c82db10e4c2",
            "subnet_id": "subnet-0f60977ef9a9f30bd"
          },
          "dependencies": [
            "aws_eip.jmg_ngw_ip",
            "aws_nat_gateway.jmg_ngw",
            "aws_route_table.jmg_ngwrt",
            "aws_subnet.jmg_pridbc",
            "aws_subnet.jmg_puba",
            "aws_vpc.jmg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jmg_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:396350191448:security-group/sg-0ce0ac243eed1a666",
            "description": "HTTP_ICMP_SQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce0ac243eed1a666",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "icmp",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jmg-websg",
            "name_prefix": "",
            "owner_id": "396350191448",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jmg-sg"
            },
            "tags_all": {
              "Name": "jmg-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea1a121618707ef8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jmg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jmg_pria",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:396350191448:subnet/subnet-03ff6b34efde87984",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-03ff6b34efde87984",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396350191448",
            "tags": {
              "Name": "jmg_pria"
            },
            "tags_all": {
              "Name": "jmg_pria"
            },
            "vpc_id": "vpc-0ea1a121618707ef8"
          },
          "dependencies": [
            "aws_vpc.jmg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jmg_pric",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:396350191448:subnet/subnet-03ee954376f9bf7d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-03ee954376f9bf7d0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396350191448",
            "tags": {
              "Name": "jmg_pric"
            },
            "tags_all": {
              "Name": "jmg_pric"
            },
            "vpc_id": "vpc-0ea1a121618707ef8"
          },
          "dependencies": [
            "aws_vpc.jmg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jmg_pridba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:396350191448:subnet/subnet-0860ab4da7365a95b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0860ab4da7365a95b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396350191448",
            "tags": {
              "Name": "jmg_pridba"
            },
            "tags_all": {
              "Name": "jmg_pridba"
            },
            "vpc_id": "vpc-0ea1a121618707ef8"
          },
          "dependencies": [
            "aws_vpc.jmg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jmg_pridbc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:396350191448:subnet/subnet-0f60977ef9a9f30bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0f60977ef9a9f30bd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396350191448",
            "tags": {
              "Name": "jmg_pridbc"
            },
            "tags_all": {
              "Name": "jmg_pridbc"
            },
            "vpc_id": "vpc-0ea1a121618707ef8"
          },
          "dependencies": [
            "aws_vpc.jmg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jmg_puba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:396350191448:subnet/subnet-06f0205e97be31309",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-06f0205e97be31309",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396350191448",
            "tags": {
              "Name": "jmg_puba"
            },
            "tags_all": {
              "Name": "jmg_puba"
            },
            "vpc_id": "vpc-0ea1a121618707ef8"
          },
          "dependencies": [
            "aws_vpc.jmg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jmg_pubc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:396350191448:subnet/subnet-0a4ccabba8a25a1af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a4ccabba8a25a1af",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396350191448",
            "tags": {
              "Name": "jmg_pubc"
            },
            "tags_all": {
              "Name": "jmg_pubc"
            },
            "vpc_id": "vpc-0ea1a121618707ef8"
          },
          "dependencies": [
            "aws_vpc.jmg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jmg_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:396350191448:vpc/vpc-0ea1a121618707ef8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04023389fd4f886d4",
            "default_route_table_id": "rtb-09b27f8f0cc851a4e",
            "default_security_group_id": "sg-0fb927950198fcd56",
            "dhcp_options_id": "dopt-7d480616",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ea1a121618707ef8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09b27f8f0cc851a4e",
            "owner_id": "396350191448",
            "tags": {
              "Name": "jmg-vpc"
            },
            "tags_all": {
              "Name": "jmg-vpc"
            }
          }
        }
      ]
    }
  ]
}